tests/paczka1/small_fuzzy/35460365.err
Error in line 7: S248 S379 43,8
Error in line 10: I2tTW7vB3 S379 9,5
